--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "npm install --prefix api && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
